--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "private": true,
   "main": "electron/main.js",
   "scripts": {
-    "build": "next build",
+    "build": "cross-env NODE_ENV=production next build",
     "dev": "next dev",
     "electron": "electron .",
-    "electron:build": "next build && electron-builder",
-    "electron:build:linux": "next build && electron-builder --linux",
-    "electron:build:mac": "next build && electron-builder --mac",
-    "electron:build:win": "next build && electron-builder --win",
-    "electron:dev": "concurrently \"npm run dev\" \"wait-on http://localhost:3000 && electron .\"",
-    "export": "next build && next export",
+    "electron:build": "npm run build && electron-builder",
+    "electron:build:linux": "npm run build && electron-builder --linux",
+    "electron:build:mac": "npm run build && electron-builder --mac",
+    "electron:build:win": "npm run build && electron-builder --win",
+    "electron:dev": "cross-env NODE_ENV=development concurrently \"npm run dev\" \"wait-on http://localhost:3000 && electron .\"",
+    "export": "npm run build && next export",
     "lint": "next lint",
     "start": "next start"
   },
@@ -50,8 +50,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
+    "cross-env": "^10.1.0",
     "date-fns": "4.1.0",
-    "electron": "latest",
     "embla-carousel-react": "8.5.1",
     "geist": "latest",
     "input-otp": "1.4.1",
@@ -65,6 +65,7 @@
     "react-day-picker": "9.8.0",
     "react-dom": "^19",
     "react-hook-form": "^7.60.0",
+    "react-pdf": "^10.1.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
     "sonner": "^1.7.4",
@@ -79,7 +80,6 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "concurrently": "^8.2.2",
-    "electron-builder": "^25.1.8",
     "postcss": "^8.5",
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
