feat: auth by code

--- a/.env.template
+++ b/.env.template
@@ -4,3 +4,6 @@ NEXT_PUBLIC_OPENAI_MODEL=gpt
 
 NEXT_PUBLIC_FIRE_KEY=your_firecrawl_key
 NEXT_PUBLIC_POLL_KEY=your_pollinations_key
+
+NEXT_PUBLIC_AUTH_TOKEN=your_auth_token
+NEXT_PUBLIC_CONFIG_URL=your_config_json_url
