--- a/.env.template
+++ b/.env.template
@@ -1,9 +1,12 @@
+# OpenAI
 NEXT_PUBLIC_OPENAI_API_URL=https://api.example.com/v1/chat/completions
 NEXT_PUBLIC_OPENAI_API_KEY=your_api_key
 NEXT_PUBLIC_OPENAI_MODEL=gpt
 
+# 可选
 NEXT_PUBLIC_FIRE_KEY=your_firecrawl_key
 NEXT_PUBLIC_POLL_KEY=your_pollinations_key
 
+# 可选
 NEXT_PUBLIC_AUTH_TOKEN=your_auth_token
 NEXT_PUBLIC_CONFIG_URL=your_config_json_url
