--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "electron:dev": "cross-env NODE_ENV=development concurrently \"npm run dev\" \"wait-on http://localhost:3000 && electron .\"",
     "export": "npm run build && next export",
     "lint": "next lint",
+    "release": "npm run build && electron-builder --publish=always",
+    "release:github": "npm run build && electron-builder --publish=github",
     "start": "next start"
   },
   "dependencies": {
@@ -84,6 +86,8 @@
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
     "typescript": "^5",
+    "electron": "38.2.2",
+    "electron-builder": "^25.1.8",
     "wait-on": "^8.0.1"
   }
 }
